# NovelFactory

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: AGENTS.md  README.md  config.toml
.github/: copilot-instructions.md
.openclaw/: workspace-state.json
.skills/canvas-dev/: README.md
.skills/headless-cli/: SKILL.md
.skills/skills-skills/: SKILL.md
.skills/sop-generator/: SKILL.md
.workflow/canvas-dev/: Obsidian Canvas AI驱动的项目架构洞察与生成引擎.md  README.md  workflow.md
docs/: 00_项目入口.md  01_项目蓝图.md  02_任务看板.md  03_开发决策集.md  05_编码规范.md  06_创作方法论.md  MEMORY.md  PROJECT_BRIEF.md  TASKS.md  TEST_PLAN_EXPERT.md  architecture-audit-2026-05-31.md  experts-report.md  frontend-architecture.md  guided-inspiration-design.md  phase1-requirements.md  phase2-project-creation.md  process-realignment-audit.md  system-architecture.md  ui-ux-redesign-analysis.md  writing-flow-analysis.md
docs/archive/: TASK_0002_FRONTEND_SUMMARY.md  full-flow-functional-audit.md  gap-analysis.md  phase1-requirements.md  platform-style-analysis.md
docs/产品需求/: PRD.md  人机协作流程设计.md  写作模式设计.md  功能清单.md  局部修改设计.md  流程审计报告.md  用户流程.md  验收标准.md
longform-project-system/: README.md  SYSTEM_DESIGN.md
reports/: 0021-audit-report.md  audit-backend.md  audit-content.md  audit-frontend.md  audit-pipeline.md
scripts/: backfill_projects.py  fix_project_fk.py  fix_world.py  repair_outline.py  test_api.py  test_character.py
tasks/: INDEX.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  (+2 more)
长篇项目管理系统/: 命名规范.md  方法论映射.md  系统设计.md  说明.md
(+300 files in other folders)
